--- a/utility_meters.yaml
+++ b/utility_meters.yaml
@@ -37,13 +37,13 @@ power_consumption_monthly:
   unique_id: 01948482-307a-73b9-bd3d-3aeceb7696e1
   source: sensor.energy_meter_total_in
   name: "Stromverbrauch (Monat)"
-  cycle: daily
+  cycle: monthly
   periodically_resetting: True
   always_available: True
 power_consumption_yearly:
   unique_id: 01948482-91bd-736d-a797-eb8de12f2f06
   source: sensor.energy_meter_total_in
   name: "Stromverbrauch (Jahr)"
-  cycle: daily
+  cycle: yearly
   periodically_resetting: True
   always_available: True
